fix: meetings page right part layout and alignment

--- a/src/components/Dashboard/Meetings/SelectSlots/SelectSlots.module.scss
+++ b/src/components/Dashboard/Meetings/SelectSlots/SelectSlots.module.scss
@@ -1,7 +1,10 @@
 .SelectSlots {
   z-index: 1;
   position: absolute;
-  right: 80px;
+  right: calc(19.25vw - 200px);
+  @media screen and (max-width: 1200px) {
+    right: 30px;
+  }
   transform: translateY(90px);
 
   display: flex;
@@ -10,7 +13,7 @@
   justify-content: center;
   align-items: center;
   gap: 32px;
-  
+
   overflow-y: scroll;
   height: 500px;
   width: 550px;
